src/objects/PromoPromoScale__c.object
<CustomObject>
    <description>Junction object between Promotions and Promo Scale</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description from the promo scale</description>
        <formula>Promo_Scale__r.Description__c</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofTickets__c</fullName>
        <label># of Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <formula>Promo_Scale__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo_Scale__c</fullName>
        <label>Promo Scale</label>
        <referenceTo>PromoScale__c</referenceTo>
        <relationshipLabel>Promo-Promo Scale</relationshipLabel>
        <relationshipName>Promo_Promo_Scale</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Promotions__c</fullName>
        <label>Promotions</label>
        <referenceTo>Promotions__c</referenceTo>
        <relationshipLabel>Promo-Promo Scale</relationshipLabel>
        <relationshipName>Promo_Promo_Scale</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TicketValue__c</fullName>
        <inlineHelpText>Total value for the # of Tickets * Price</inlineHelpText>
        <label>Ticket Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fxPrice__c</fullName>
        <formula>(Price__c / (Promo_Scale__r.AdPlan__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Price (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTicketValue__c</fullName>
        <formula>(TicketValue__c / (Promo_Scale__r.AdPlan__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Ticket Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Promo-Promo Scale</label>
    <nameField>
        <displayFormat>PPS-{00000}</displayFormat>
        <label>Promo-Promo Scale Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promo-Promo Scale</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>